# The_Ledger_2

./: .env.example  .gitignore  DESIGN.md  DOMAIN_NOTES.md  FINAL_REPORT.md  INTERIM_REPORT.md  README.md  SUBMISSION_CHECKLIST.md  architecture.md  context_trace.md  pyproject.toml  requirements.txt
.refinery/: extraction_ledger.jsonl
artifacts/: concurrency-test.txt  concurrency_load_test.txt  counterfactual_and_regulatory.txt  immutability_and_hash_chain.txt  mcp_lifecycle_trace.txt  projection_lag_measurements.txt
data/: applicant_profiles.json  seed_events.jsonl
ledger/: event_store.py  upcasters.py
ledger/agents/: __init__.py  base_agent.py  credit_analysis_agent.py  stub_agents.py  week3_adapter.py
ledger/llm/: __init__.py  client.py
ledger/projections/: agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
ledger/registry/: client.py
ledger/schema/: events.py
ledger/ui/: server.py
scripts/: ace_demo.py  run_pipeline.py  seed_registry.py  validate_week3_bridge.py
src/: __init__.py  event_store.py  mcp_definitions.py  mcp_server.py  schema.sql
src/aggregates/: __init__.py  agent_session.py  credit_record.py  loan_application.py
tests/: conftest.py  test_agent_context_reconstruction.py  test_agent_crash_recovery.py  test_audit_ledger_aggregate.py  test_command_handlers.py  test_compliance_record_aggregate.py  test_concurrency.py  test_event_store.py  test_integrity_upcasting.py  test_loan_application_aggregate.py  test_mcp_definitions.py  test_mcp_server.py  test_projection_slo.py  test_registry_client.py
(+14 files in other folders)
