[project]
name = "the-ledger"
version = "0.1.0"
description = "Event-sourced agentic commercial loan ledger"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg==0.29.0",
  "anthropic==0.30.1",
  "httpx==0.27.2",
  "pydantic==2.6.4",
  "langgraph==0.2.34",
  "fastapi==0.115.5",
  "uvicorn==0.32.1",
  "faker==24.14.1",
  "reportlab==4.2.0",
  "openpyxl==3.1.5",
  "fastmcp==0.9.4",
  "python-dotenv==1.0.1",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = []
